--- a/SWP391_N3/nbproject/private/private.properties
+++ b/SWP391_N3/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
-j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\build.properties
+deploy.ant.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\13\\tomcat80.properties
+j2ee.server.home=D:/Tomcat/apache-tomcat-8.5.70
+j2ee.server.instance=tomcat80:home=D:\\Tomcat\\apache-tomcat-8.5.70
+user.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\13\\build.properties
