--- a/SWP391_SE1630-NET_Team3/nbproject/private/private.properties
+++ b/SWP391_SE1630-NET_Team3/nbproject/private/private.properties
@@ -1,7 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\stick\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\stick\\Desktop\\1_SWP391\\team\\test\\SWP391_SE1630-NET_Team3\\library\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\stick\\Desktop\\1_SWP391\\team\\test\\SWP391_SE1630-NET_Team3\\library\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.sqljdbc42.jar=C:\\Users\\stick\\Desktop\\1_SWP391\\team\\test\\SWP391_SE1630-NET_Team3\\library\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\stick\\AppData\\Roaming\\NetBeans\\13\\build.properties
