--- a/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
+++ b/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
@@ -5,8 +5,8 @@
         <servlet-class>controller.loginController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>productController</servlet-name>
-        <servlet-class>controller.productController</servlet-class>
+        <servlet-name>shopController</servlet-name>
+        <servlet-class>controller.shopController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>homeController</servlet-name>
@@ -17,8 +17,8 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>productController</servlet-name>
-        <url-pattern>/product</url-pattern>
+        <servlet-name>shopController</servlet-name>
+        <url-pattern>/shop</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>homeController</servlet-name>
