--- a/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
+++ b/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
@@ -29,13 +29,12 @@
         <servlet-class>controller.SignoutController</servlet-class>
     </servlet>
     <servlet>
-
         <servlet-name>SearchController</servlet-name>
         <servlet-class>controller.SearchController</servlet-class>
-
+    </servlet>
+    <servlet>
         <servlet-name>BlogListController</servlet-name>
         <servlet-class>controller.BlogListController</servlet-class>
-
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
