blog list third attempt some change

--- a/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
+++ b/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
@@ -32,7 +32,8 @@
 
         <servlet-name>SearchController</servlet-name>
         <servlet-class>controller.SearchController</servlet-class>
-
+    </servlet>
+    <servlet>
         <servlet-name>BlogListController</servlet-name>
         <servlet-class>controller.BlogListController</servlet-class>
 
