--- a/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
+++ b/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
@@ -53,16 +53,8 @@
         <servlet-class>controller.EditProductController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>SaveEditProductController</servlet-name>
-        <servlet-class>controller.SaveEditProductController</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>AddProductImageController</servlet-name>
         <servlet-class>controller.AddProductImageController</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>SaveAddImageController</servlet-name>
-        <servlet-class>controller.SaveAddImageController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>AddProductController</servlet-name>
@@ -71,6 +63,22 @@
     <servlet>
         <servlet-name>DeleteProductImageController</servlet-name>
         <servlet-class>controller.DeleteProductImageController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SaveAddImageController</servlet-name>
+        <servlet-class>controller.SaveAddImageController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SearchInManageController</servlet-name>
+        <servlet-class>controller.SearchInManageController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManageAccountController</servlet-name>
+        <servlet-class>controller.ManageAccountController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditAccountRoleController</servlet-name>
+        <servlet-class>controller.EditAccountRoleController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ShopController</servlet-name>
@@ -117,16 +125,8 @@
         <url-pattern>/editProduct</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>SaveEditProductController</servlet-name>
-        <url-pattern>/saveEditProduct</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>AddProductImageController</servlet-name>
         <url-pattern>/addProductImage</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SaveAddImageController</servlet-name>
-        <url-pattern>/saveAddImage</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AddProductController</servlet-name>
@@ -135,6 +135,22 @@
     <servlet-mapping>
         <servlet-name>DeleteProductImageController</servlet-name>
         <url-pattern>/deleteProductImage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SaveAddImageController</servlet-name>
+        <url-pattern>/saveAddImage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SearchInManageController</servlet-name>
+        <url-pattern>/searchInManage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManageAccountController</servlet-name>
+        <url-pattern>/manageAccount</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditAccountRoleController</servlet-name>
+        <url-pattern>/editAccountRole</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
