--- a/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
+++ b/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    <filter>
-        <filter-name>CheckUrlFilter</filter-name>
-        <filter-class>filter.CheckUrlFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>CheckUrlFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
     <servlet>
         <servlet-name>BlogListController</servlet-name>
         <servlet-class>controller.BlogListController</servlet-class>
@@ -147,6 +139,10 @@
         <servlet-name>EditBlogController</servlet-name>
         <servlet-class>controller.EditBlogController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManageShopOrderController</servlet-name>
+        <servlet-class>controller.ManageShopOrderController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ShopController</servlet-name>
         <url-pattern>/shop</url-pattern>
@@ -282,6 +278,10 @@
     <servlet-mapping>
         <servlet-name>EditBlogController</servlet-name>
         <url-pattern>/editBlog</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManageShopOrderController</servlet-name>
+        <url-pattern>/manageShopOrder</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
