--- a/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
+++ b/SWP391_SE1630-NET_Team3/web/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    
     <servlet>
         <servlet-name>BlogListController</servlet-name>
         <servlet-class>controller.BlogListController</servlet-class>
@@ -140,6 +139,30 @@
         <servlet-name>EditBlogController</servlet-name>
         <servlet-class>controller.EditBlogController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManageOrderShopController</servlet-name>
+        <servlet-class>controller.ManageOrderShopController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateStatusController</servlet-name>
+        <servlet-class>controller.UpdateStatusDeliveringController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OrderDetailShopController</servlet-name>
+        <servlet-class>controller.OrderDetailShopController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MyOrderController</servlet-name>
+        <servlet-class>controller.MyOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OrderDetailCustomerController</servlet-name>
+        <servlet-class>controller.OrderDetailCustomerController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateStatusOrderCustomerController</servlet-name>
+        <servlet-class>controller.UpdateStatusOrderCustomerController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ShopController</servlet-name>
         <url-pattern>/shop</url-pattern>
@@ -275,6 +298,30 @@
     <servlet-mapping>
         <servlet-name>EditBlogController</servlet-name>
         <url-pattern>/editBlog</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManageOrderShopController</servlet-name>
+        <url-pattern>/manageOrderShop</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateStatusController</servlet-name>
+        <url-pattern>/updateStatus</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrderDetailShopController</servlet-name>
+        <url-pattern>/orderDetailShop</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MyOrderController</servlet-name>
+        <url-pattern>/myOrder</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrderDetailCustomerController</servlet-name>
+        <url-pattern>/orderDetailCustomer</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateStatusOrderCustomerController</servlet-name>
+        <url-pattern>/updateStatusOrderCustomer</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
